--- a/Japan.html
+++ b/Japan.html
@@ -16,9 +16,9 @@
                   
                 <div>
                     <ul>
-                        <li> <a href="C:\Users\YVV\source\repos\VisualStudio\Visual Studio CODE\Project-Day\Home.html"> Home </a> </li>
-                        <li> <a href="C:\Users\YVV\source\repos\VisualStudio\Visual Studio CODE\Project-Day\Destinations.html"> Destinations </a> </li>
-                        <li> <a href="C:\Users\YVV\source\repos\VisualStudio\Visual Studio CODE\Project-Day\About_Us.html"> About Us </a> </li>
+                        <li> <a href="Project-Day\Home.html"> Home </a> </li>
+                        <li> <a href="Destinations.html"> Destinations </a> </li>
+                        <li> <a href="About_Us.html"> About Us </a> </li>
                     </ul>
                 </div>
         
