--- a/Japan.html
+++ b/Japan.html
@@ -16,7 +16,7 @@
                   
                 <div>
                     <ul>
-                        <li> <a href="Project-Day\Home.html"> Home </a> </li>
+                        <li> <a href="Home.html"> Home </a> </li>
                         <li> <a href="Destinations.html"> Destinations </a> </li>
                         <li> <a href="About_Us.html"> About Us </a> </li>
                     </ul>
